<resources>
    <string name="app_name">Controle Estoque Sup. Correia</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="btn_autenticar">Autenticar</string>
    <string name="message_login_failed">Não Autenticado</string>
    <string name="message_bem_vindo">Bem vindo</string>
    <string name="title_activity_baixa">BaixaActivity</string>
    <string name="txt_troca">Troca</string>
    <string name="txt_quebra">Quebra</string>
    <string name="txt_Padaria">Padaria</string>
    <string name="txt_Uso"><![CDATA[Uso & Consumo]]></string>
    <string name="lbl_codigo">Código</string>
    <string name="lbl_quantidade">Quantidade a Lançar</string>
    <string name="lbl_quantidade_banco_dados">Quantidade no Banco de Dados</string>
    <string name="message_informar_codigo">Informe o código</string>
    <string name="message_faltam_campos">Faltam campos a serem preenchidos</string>
    <string name="title_usuario">Usuário:</string>
    <string name="message_concluido">Concluído</string>
    <string name="message_produto_null">Produto não encontrado.</string>
    <string name="message_erro_operacao">Não foi possível realizar a operação.</string>
    <string name="title_erro">Erro</string>
    <string name="lbl_quantidade_disponivel">Quantidade Disponível</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="txt_exit">Sair</string>
    <string name="title_lancados">Lançados</string>
    <string name="title_activity_list_lancados">ListLancadosActivity</string>
    <string name="title_activity_consulta_preco">ConsultaPrecoActivity</string>
    <string name="lblDescricao">Descrição</string>
    <string name="lbl_valor">Valor</string>
    <string name="title_cons_preco">Consultar Preço</string>
    <string name="title_consulta_preco">Consulta de Preço</string>
    <string name="message_erro">ERRO:</string>
</resources>
